--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -5,8 +5,8 @@ on: push
 
 env:
   GODOT_VERSION: 4.3
-  EXPORT_NAME: test-project
-  PROJECT_PATH: test-project
+  EXPORT_NAME: dragonfly-red
+  PROJECT_PATH: .
 
 permissions:
   contents: read
